--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -247,7 +247,7 @@
     </div>
 
     <h2 class="text-center jinx-shortfill-style font-weight-bold">How to use Jinx shortfill?</h2>
-    <div class="icon-test mt-5 text-center d-flex justify-content-around">
+    <div class="icon-test-instructions mt-5 text-center d-flex justify-content-around">
       <div>
         <img class="icon-size-steps" src={{ 'step-1-yellow-product-page.jpg' | asset_url }}>
         <p class="font-weight-bold">Unscrew the lid and take<br/>off the cap.</p>
