--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -20,7 +20,7 @@
 
   .footer-block.grid__item {
     padding: 0;
-    margin: 4rem 0;
+    margin: 0rem 0;
     width: 100%;
   }
 
@@ -31,7 +31,8 @@
   .footer__content-top {
     padding-bottom: 3rem;
     padding-left: 0rem;
-    padding-right: 4rem;
+    padding-right: 0rem;
+    width: 80vw;
   }
 }
 
@@ -494,10 +495,12 @@ noscript .localization-selector.link {
 @media screen and (max-width: 749px) {
   .footer-block-image {
     text-align: center;
+    border-top: 1px solid white;
   }
 }
 
 .footer-block-image > img {
+  margin-top: 40px;
   height: auto;
 }
 
