--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -297,7 +297,7 @@
       
       <div class="ad-custom-bg-1 clearfix col-md-6 mr-4">
         <p class="ad-header">The hunt<br/> for the<br/> Gold Jinx!<br/>
-          <button class="btn btn-custom-mobile mt-4">Redeem</button>
+          <button class="btn btn-custom-mobile btn-custom-mobile-2 mt-4">Redeem</button>
         </p>
         
         <img class="footer-img float-right" src={{ 'gold-jinx-square-v1-product-page.jpg' | asset_url }} />
@@ -305,7 +305,7 @@
         
       <div class="ad-custom-bg-2 clearfix col-md-6 ml-4">
           <p class="ad-header">Try a<br/> Sample<br/> Pack now!<br/>
-            <button class="btn btn-custom-mobile mt-4">Shop Now</button>
+            <button class="btn btn-custom-mobile btn-custom-mobile-2 mt-4">Shop Now</button>
           </p>
           <img class="footer-img float-right" src={{ 'samples-blackberry-product-pages.jpg' | asset_url }} />
       </div>
